force-app/main/default/objects/Shipment__c/fields/Carrier_Code__c.field-meta.xml
<CustomField>
        <fullName>Carrier_Code__c</fullName>
        <label>Carrier Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TNT</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>