force-app/main/default/objects/Shipment__c/fields/Carrier_Tracking_Code__c.field-meta.xml
<CustomField>
        <fullName>Carrier_Tracking_Code__c</fullName>
        <label>Carrier Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>