force-app/main/default/objects/Shipment__c/fields/Carrier_Tracking_URL__c.field-meta.xml
<CustomField>
        <fullName>Carrier_Tracking_URL__c</fullName>
        <label>Carrier Tracking URL</label>
        <type>Url</type>
    </CustomField>