force-app/main/default/objects/Shipment__c/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
        <fullName>DeliveryNumber__c</fullName>
        <label>Delivery Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>