force-app/main/default/objects/Shipment__c/fields/ServiceContract__c.field-meta.xml
<CustomField>
        <fullName>ServiceContract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>