force-app/main/default/objects/Shipment__c/fields/ShipmentDate__c.field-meta.xml
<CustomField>
        <fullName>ShipmentDate__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </CustomField>